display model summary

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyNbPYV10onF4494L8kL8e0v",
+      "authorship_tag": "ABX9TyPTPKi124oq3f5H0dv50Kui",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1041,7 +1041,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "TLS4oUxNn0Yy"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TLS4oUxNn0Yy",
+        "outputId": "352223b1-398c-4ea5-b386-ed35791ddeef"
       },
       "source": [
         "opt = keras.optimizers.RMSprop(lr=0.0001, decay=1e-6)\n",
@@ -1050,8 +1054,17 @@
         "              optimizer=opt,\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 25,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/keras/optimizer_v2/rmsprop.py:130: UserWarning: The `lr` argument is deprecated, use `learning_rate` instead.\n",
+            "  super(RMSprop, self).__init__(name, **kwargs)\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -1059,8 +1072,88 @@
         "id": "WSWECAheqqgv"
       },
       "source": [
-        ""
+        "The function `model.summary()` provides you a tabular summary of the `CNN architecture`, which is helpful for seeing what the output shape of the model looks like after each operation."
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "SAdMW9brzno6",
+        "outputId": "f8a2fcc5-8daa-4734-cc35-8f3f9630c390"
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Model: \"sequential\"\n",
+            "_________________________________________________________________\n",
+            " Layer (type)                Output Shape              Param #   \n",
+            "=================================================================\n",
+            " conv2d_2 (Conv2D)           (None, 64, 64, 32)        3776      \n",
+            "                                                                 \n",
+            " activation (Activation)     (None, 64, 64, 32)        0         \n",
+            "                                                                 \n",
+            " conv2d_3 (Conv2D)           (None, 62, 62, 32)        9248      \n",
+            "                                                                 \n",
+            " activation_1 (Activation)   (None, 62, 62, 32)        0         \n",
+            "                                                                 \n",
+            " max_pooling2d (MaxPooling2D  (None, 31, 31, 32)       0         \n",
+            " )                                                               \n",
+            "                                                                 \n",
+            " dropout (Dropout)           (None, 31, 31, 32)        0         \n",
+            "                                                                 \n",
+            " conv2d_4 (Conv2D)           (None, 31, 31, 64)        18496     \n",
+            "                                                                 \n",
+            " activation_2 (Activation)   (None, 31, 31, 64)        0         \n",
+            "                                                                 \n",
+            " conv2d_5 (Conv2D)           (None, 29, 29, 64)        36928     \n",
+            "                                                                 \n",
+            " activation_3 (Activation)   (None, 29, 29, 64)        0         \n",
+            "                                                                 \n",
+            " max_pooling2d_1 (MaxPooling  (None, 14, 14, 64)       0         \n",
+            " 2D)                                                             \n",
+            "                                                                 \n",
+            " dropout_1 (Dropout)         (None, 14, 14, 64)        0         \n",
+            "                                                                 \n",
+            " flatten (Flatten)           (None, 12544)             0         \n",
+            "                                                                 \n",
+            " dense (Dense)               (None, 512)               6423040   \n",
+            "                                                                 \n",
+            " activation_4 (Activation)   (None, 512)               0         \n",
+            "                                                                 \n",
+            " dropout_2 (Dropout)         (None, 512)               0         \n",
+            "                                                                 \n",
+            " dense_1 (Dense)             (None, 10)                5130      \n",
+            "                                                                 \n",
+            " activation_5 (Activation)   (None, 10)                0         \n",
+            "                                                                 \n",
+            "=================================================================\n",
+            "Total params: 6,496,618\n",
+            "Trainable params: 6,496,618\n",
+            "Non-trainable params: 0\n",
+            "_________________________________________________________________\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sjmNyISLzukg"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
