Define sliding helper function

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyPTPKi124oq3f5H0dv50Kui",
+      "authorship_tag": "ABX9TyN1GgjesAbVFZ2nrkz8eSr0",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -428,17 +428,6 @@
       "outputs": []
     },
     {
-      "cell_type": "code",
-      "metadata": {
-        "id": "PSAwf7WVuhN2"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
       "cell_type": "markdown",
       "metadata": {
         "id": "z_P1HyB9I3Y8"
@@ -453,9 +442,44 @@
         "id": "yfdgOtpfI-TY"
       },
       "source": [
-        ""
+        "'''\n",
+        "Function_name:\n",
+        "  sliding\n",
+        "description:\n",
+        "input:\n",
+        "  shape: the target shape\n",
+        "  window_size: the shape of the window\n",
+        "  step-size:\n",
+        "  fixed\n",
+        "output:\n",
+        "  windows:\n",
+        "'''\n",
+        "\n",
+        "def sliding(shape, window_size, step_size=None, fixed=True):\n",
+        "    h, w = shape\n",
+        "    if step_size:\n",
+        "        h_step = step_size\n",
+        "        w_step = step_size\n",
+        "    else:\n",
+        "        h_step = window_size\n",
+        "        w_step = window_size\n",
+        "\n",
+        "    h_wind = window_size\n",
+        "    w_wind = window_size\n",
+        "    windows = []\n",
+        "    for y in range(0, h, h_step):\n",
+        "        for x in range(0, w, w_step):\n",
+        "            h_min = min(h_wind, h - y)\n",
+        "            w_min = min(w_wind, w - x)\n",
+        "            if fixed:\n",
+        "              if h_min < h_wind or w_min < w_wind:\n",
+        "                  continue\n",
+        "            window = (x, y, w_min, h_min)\n",
+        "            windows.append(window)\n",
+        "\n",
+        "    return windows"
       ],
-      "execution_count": 7,
+      "execution_count": 27,
       "outputs": []
     },
     {
