save pretrained model and create callback util

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyN1GgjesAbVFZ2nrkz8eSr0",
+      "authorship_tag": "ABX9TyM4FmZ7p4S5fwYvOja8/2og",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1169,9 +1169,84 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "zUeKZSuPHbBd"
+      },
+      "source": [
+        "##**4. Fitting (training) of the convolutional neural network**\n",
+        "\n",
+        "The next step in the training process is the actual training (fitting) of the model.\n",
+        "\n",
+        "We'll set a folder path to which the model with the best validation accuracy is saved to. The pre-trained model is saved in the folder `02_pretrained_model`."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "sjmNyISLzukg"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 52
+        },
+        "id": "sjmNyISLzukg",
+        "outputId": "e15a2ab2-d58b-458e-8297-3b4dfa23bca4"
+      },
+      "source": [
+        "save_dir = 'drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/'\n",
+        "model_name = 'keras_sentinel2_classification_trained_model_e50.json'\n",
+        "\n",
+        "filepath_tmp = save_dir+model_name\n",
+        "filepath_tmp"
+      ],
+      "execution_count": 28,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            },
+            "text/plain": [
+              "'drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json'"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 28
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "iA5853KGJjPk"
+      },
+      "source": [
+        "`Callbacks` are utilitiesthat are called at certain points during model training. They can support us in better understanding the performance of our model during training. One useful callback is *ModelCheckpoint*, which allows us to save the Keras model after training. With class `ModelCheckpoint` we can define the type of information we would like to save.\n",
+        "\n",
+        "The following code saves only the model with the best `validation accuracy`."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "UFMqge5mJfX8"
+      },
+      "source": [
+        "checkpoint = ModelCheckpoint(\n",
+        "    filepath_tmp,\n",
+        "    'val_accuracy',\n",
+        "    verbose=1,\n",
+        "    save_best_only=True,\n",
+        "    mode='max')\n",
+        "callbacks_list = [checkpoint]"
+      ],
+      "execution_count": 30,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "TmzqhUCuLTka"
       },
       "source": [
         ""
