train(fit) Keras model

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyM4FmZ7p4S5fwYvOja8/2og",
+      "authorship_tag": "ABX9TyNTbtT8teI22mFx4k54mXVR",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1244,9 +1244,102 @@
       "outputs": []
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FvMTyXSLOjj7"
+      },
+      "source": [
+        "The final step is to train (fit) the Keras model. We can use `model.fit()` to fit the model based on the training dataset. The resulting object is a `history` object and a common practise is to call the output of the training process `history`.\n",
+        "\n",
+        "The function `model.fit()` requires us to to specify the following parameters:\n",
+        "* `input (X)` and `output (y)` data: here we specify the input and output data of our model\n",
+        "* `validation_data`: here we enter the test data subsets X_test and y_test and our model outputs are validated against these validation data for each epoch (training cycle)\n",
+        "* `epochs`: number of training cycles\n",
+        "* `batch_size`: defines the size of the training data subsets (eg. 32 samples) after which the weights of the network are updated\n",
+        "* `callbacks`: define the callbacks we would like to make use of during the training process\n",
+        "* `verbose`: specify how the progress of the training shall be shown - option 0,1,2 - option 1 for e.g. shows us a progress bar for each epoch                          "
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "TmzqhUCuLTka"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "TmzqhUCuLTka",
+        "outputId": "4217e27d-6a8e-4d3b-9a5d-7df6ff9f7fee"
+      },
+      "source": [
+        "batch_size = 32\n",
+        "epochs = 10\n",
+        "\n",
+        "history = model.fit(X_train, y_train,\n",
+        "                    epochs=epochs,\n",
+        "                    batch_size=batch_size,\n",
+        "                    validation_data=(X_test, y_test),\n",
+        "                    callbacks=callbacks_list,\n",
+        "                    verbose = 1)"
+      ],
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Epoch 1/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 1.4699 - accuracy: 0.4622\n",
+            "Epoch 00001: val_accuracy improved from -inf to 0.63600, saving model to drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json\n",
+            "INFO:tensorflow:Assets written to: drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json/assets\n",
+            "266/266 [==============================] - 188s 702ms/step - loss: 1.4699 - accuracy: 0.4622 - val_loss: 1.0352 - val_accuracy: 0.6360\n",
+            "Epoch 2/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 1.0139 - accuracy: 0.6349\n",
+            "Epoch 00002: val_accuracy improved from 0.63600 to 0.74400, saving model to drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json\n",
+            "INFO:tensorflow:Assets written to: drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json/assets\n",
+            "266/266 [==============================] - 187s 705ms/step - loss: 1.0139 - accuracy: 0.6349 - val_loss: 0.8301 - val_accuracy: 0.7440\n",
+            "Epoch 3/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 0.8701 - accuracy: 0.6845\n",
+            "Epoch 00003: val_accuracy did not improve from 0.74400\n",
+            "266/266 [==============================] - 186s 698ms/step - loss: 0.8701 - accuracy: 0.6845 - val_loss: 0.8549 - val_accuracy: 0.6647\n",
+            "Epoch 4/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 0.7740 - accuracy: 0.7226\n",
+            "Epoch 00004: val_accuracy did not improve from 0.74400\n",
+            "266/266 [==============================] - 185s 697ms/step - loss: 0.7740 - accuracy: 0.7226 - val_loss: 0.7036 - val_accuracy: 0.7293\n",
+            "Epoch 5/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 0.6953 - accuracy: 0.7579\n",
+            "Epoch 00005: val_accuracy improved from 0.74400 to 0.77333, saving model to drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json\n",
+            "INFO:tensorflow:Assets written to: drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json/assets\n",
+            "266/266 [==============================] - 186s 701ms/step - loss: 0.6953 - accuracy: 0.7579 - val_loss: 0.6233 - val_accuracy: 0.7733\n",
+            "Epoch 6/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 0.6435 - accuracy: 0.7732\n",
+            "Epoch 00006: val_accuracy improved from 0.77333 to 0.81333, saving model to drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json\n",
+            "INFO:tensorflow:Assets written to: drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json/assets\n",
+            "266/266 [==============================] - 186s 701ms/step - loss: 0.6435 - accuracy: 0.7732 - val_loss: 0.5389 - val_accuracy: 0.8133\n",
+            "Epoch 7/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 0.6067 - accuracy: 0.7885\n",
+            "Epoch 00007: val_accuracy improved from 0.81333 to 0.83600, saving model to drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json\n",
+            "INFO:tensorflow:Assets written to: drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json/assets\n",
+            "266/266 [==============================] - 187s 702ms/step - loss: 0.6067 - accuracy: 0.7885 - val_loss: 0.5084 - val_accuracy: 0.8360\n",
+            "Epoch 8/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 0.5543 - accuracy: 0.7981\n",
+            "Epoch 00008: val_accuracy did not improve from 0.83600\n",
+            "266/266 [==============================] - 184s 693ms/step - loss: 0.5543 - accuracy: 0.7981 - val_loss: 0.4957 - val_accuracy: 0.8287\n",
+            "Epoch 9/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 0.5268 - accuracy: 0.8147\n",
+            "Epoch 00009: val_accuracy did not improve from 0.83600\n",
+            "266/266 [==============================] - 184s 691ms/step - loss: 0.5268 - accuracy: 0.8147 - val_loss: 0.5287 - val_accuracy: 0.8187\n",
+            "Epoch 10/10\n",
+            "266/266 [==============================] - ETA: 0s - loss: 0.5032 - accuracy: 0.8212\n",
+            "Epoch 00010: val_accuracy improved from 0.83600 to 0.84600, saving model to drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json\n",
+            "INFO:tensorflow:Assets written to: drive/MyDrive/Land Classification/S2_Tile_based_classification/02_pretrained_model/keras_sentinel2_classification_trained_model_e50.json/assets\n",
+            "266/266 [==============================] - 186s 698ms/step - loss: 0.5032 - accuracy: 0.8212 - val_loss: 0.4487 - val_accuracy: 0.8460\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Vs3umb9WRiwr"
       },
       "source": [
         ""
