evaluate model performance

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyNTbtT8teI22mFx4k54mXVR",
+      "authorship_tag": "ABX9TyO2O2MWslcl1vRBPAC46MOL",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1186,7 +1186,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 52
+          "height": 35
         },
         "id": "sjmNyISLzukg",
         "outputId": "e15a2ab2-d58b-458e-8297-3b4dfa23bca4"
@@ -1337,9 +1337,91 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "uhM2OOUZDoaN"
+      },
+      "source": [
+        "##**5. Evaluate the performance of the CNN model with a confusion matrix\n",
+        "\n",
+        "The final step is to evaluate the performance of our model and the model's ability to classify landcover / land use with the help of the test data. With the function `model.predict()`, we can classify the test input data `(X_test)`. The result `y_pred` is an array with the dimension `(1500, 10)`. For each input image of the test data, the prediction provides a vector which holds for each class the probability of the class."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Vs3umb9WRiwr"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Vs3umb9WRiwr",
+        "outputId": "5c595abf-e34c-48c0-fc05-c4b46ce87e68"
+      },
+      "source": [
+        "y_pred = model.predict(X_test)\n",
+        "y_pred.shape"
+      ],
+      "execution_count": 32,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1500, 10)"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 32
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "EqbGlMgbE-FO"
+      },
+      "source": [
+        "The final classification result is the class with the highest probability. The objective is to have a vector with the same length as the number of test images, which provides for each image the final predicted class. To achieve this, we have to loop over the predicted `(y_pred)` and test `(y_test)` output arrays and retrieve the index of the argument with the maximum value. We can retrieve the index of the argument with the maximum value with numpy's function `np.argmax()`.\n",
+        "\n",
+        "The result are two one dimensional arrays, `y_pred_amax` and `y_test_amax`, providing the index of the land cover class for each image."
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "t2pHYhdNE5aA",
+        "outputId": "02d939c2-ce59-41b8-b37c-b7b1fdbd7830"
+      },
+      "source": [
+        "y_pred_amax=np.zeros((len(y_pred)))\n",
+        "y_test_amax=np.zeros((len(y_pred)))\n",
+        "\n",
+        "for i in range(0,len(y_pred)):\n",
+        "    y_pred_amax[i]=np.argmax(y_pred[i,:])\n",
+        "    y_test_amax[i]=np.argmax(y_test[i,:])\n",
+        "\n",
+        "y_test_amax, y_pred_amax"
+      ],
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(array([6., 4., 1., ..., 6., 6., 3.]), array([6., 4., 1., ..., 6., 6., 3.]))"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 33
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "S4g0E5fWHZ75"
       },
       "source": [
         ""
