create confusion matrix to summarize results

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyO2O2MWslcl1vRBPAC46MOL",
+      "authorship_tag": "ABX9TyMB4wsdNFuGi4BiHHBQBA8D",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1419,9 +1419,58 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FoBSfrY_Ii3F"
+      },
+      "source": [
+        "###**Create a confusion matrix**\n",
+        "\n",
+        "Classification accuracy alone can often be misleading, esp. if you have an unequal number of observations in each class or if you have more than two classes in your dataset. A confusion matrix can give you a better idea of what your model is getting right and what type of errors it is making. A `confusion matrix` is also known as an error matrix and is a common technique for summerizing the performance of a classification algorithm.\n",
+        "\n",
+        "The metrics class of the scikit-learn package offers the function `confusion_matrix`, which computes the confusion matrix between the actual (`y_test_amax`) and predicted class (`y_pred_amax`). The result is a matrix which ummerizes the number of correct and incorrect predictions with count values broken down by each class. The rows indicate the actual class and the columns indicate the predicted class."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "S4g0E5fWHZ75"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "S4g0E5fWHZ75",
+        "outputId": "8705080d-3299-4f2a-d26d-a4af9965b2f9"
+      },
+      "source": [
+        "matrix = metrics.confusion_matrix(y_test_amax, y_pred_amax)\n",
+        "matrix"
+      ],
+      "execution_count": 34,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([[148,   1,   1,   0,   0,  10,   0,   1,   0,   0],\n",
+              "       [  2, 149,   0,   0,   0,   0,   0,   0,   0,   0],\n",
+              "       [  0,   0, 116,   0,   5,   8,   0,   5,   3,   3],\n",
+              "       [  0,   0,   0, 144,   1,   0,   0,   4,   0,   0],\n",
+              "       [  7,   0,   0,   4, 105,   6,   1,  16,  14,   3],\n",
+              "       [  4,   0,   6,   0,   7, 100,   5,   1,   6,  10],\n",
+              "       [  0,   0,   0,   0,   2,   2, 139,   0,   0,  10],\n",
+              "       [  1,   0,   3,  17,   5,   6,   0, 117,   5,   1],\n",
+              "       [  1,   0,   4,   0,   5,  19,   0,   2, 131,   5],\n",
+              "       [  0,   0,   0,   0,   0,   2,   5,   0,   2, 120]])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 34
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "Rvnm0OceK2MD"
       },
       "source": [
         ""
