convert matrix into pandas dataframe

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyMB4wsdNFuGi4BiHHBQBA8D",
+      "authorship_tag": "ABX9TyM6r7Lt8Zi3HAtSprGG4YTv",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1468,9 +1468,238 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "7apgYNApLbM8"
+      },
+      "source": [
+        "Let's convert the matrix into a `pandas.dataframe` and add class labelks to the rows and columns.  This helps better interpret the results."
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "Rvnm0OceK2MD"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 359
+        },
+        "id": "Rvnm0OceK2MD",
+        "outputId": "32001f52-ef49-40f7-fbaa-a4649fd84fca"
+      },
+      "source": [
+        "label_str=[\n",
+        "    'Annual Crop',\n",
+        "    'Forest',\n",
+        "    'HerbaceousVegetation',\n",
+        "    'Highway',\n",
+        "    'Industrial',\n",
+        "    'Pasture',\n",
+        "    'PermanentCrop',\n",
+        "    'Residential',\n",
+        "    'River',\n",
+        "    'SeaLake' ]\n",
+        "\n",
+        "con_mat_df = pd.DataFrame(matrix,\n",
+        "                                index = label_str,\n",
+        "                                columns = label_str)\n",
+        "con_mat_df"
+      ],
+      "execution_count": 35,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>Annual Crop</th>\n",
+              "      <th>Forest</th>\n",
+              "      <th>HerbaceousVegetation</th>\n",
+              "      <th>Highway</th>\n",
+              "      <th>Industrial</th>\n",
+              "      <th>Pasture</th>\n",
+              "      <th>PermanentCrop</th>\n",
+              "      <th>Residential</th>\n",
+              "      <th>River</th>\n",
+              "      <th>SeaLake</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>Annual Crop</th>\n",
+              "      <td>148</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Forest</th>\n",
+              "      <td>2</td>\n",
+              "      <td>149</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>HerbaceousVegetation</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>116</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5</td>\n",
+              "      <td>3</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Highway</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>144</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Industrial</th>\n",
+              "      <td>7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>105</td>\n",
+              "      <td>6</td>\n",
+              "      <td>1</td>\n",
+              "      <td>16</td>\n",
+              "      <td>14</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Pasture</th>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>7</td>\n",
+              "      <td>100</td>\n",
+              "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "      <td>6</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>PermanentCrop</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>2</td>\n",
+              "      <td>139</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>10</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>Residential</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>3</td>\n",
+              "      <td>17</td>\n",
+              "      <td>5</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>117</td>\n",
+              "      <td>5</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>River</th>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>5</td>\n",
+              "      <td>19</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>131</td>\n",
+              "      <td>5</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>SeaLake</th>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>120</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "                      Annual Crop  Forest  ...  River  SeaLake\n",
+              "Annual Crop                   148       1  ...      0        0\n",
+              "Forest                          2     149  ...      0        0\n",
+              "HerbaceousVegetation            0       0  ...      3        3\n",
+              "Highway                         0       0  ...      0        0\n",
+              "Industrial                      7       0  ...     14        3\n",
+              "Pasture                         4       0  ...      6       10\n",
+              "PermanentCrop                   0       0  ...      0       10\n",
+              "Residential                     1       0  ...      5        1\n",
+              "River                           1       0  ...    131        5\n",
+              "SeaLake                         0       0  ...      2      120\n",
+              "\n",
+              "[10 rows x 10 columns]"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 35
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "vYyR4BJ3Mkdj"
       },
       "source": [
         ""
