visualize normalized confusion matrix

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyNYFfYpcH8WDbnUZQfmFlij",
+      "authorship_tag": "ABX9TyPo0Teu0HymeVeKfZuIQdvS",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1991,7 +1991,7 @@
         "id": "0hzwOiW7P29D"
       },
       "source": [
-        "As a final step, you can visualize the `normalized confusion matrix` with the function `heatmap()` from the season library."
+        "As a final step, we can visualize the `normalized confusion matrix` with the function `heatmap()` from the seaborn library."
       ]
     },
     {
