format notebook layout

--- a/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
+++ b/Tile_based_classification_using_Sentinel_2_and_EuroSAT_data_Training.ipynb
@@ -7,7 +7,7 @@
       "provenance": [],
       "toc_visible": true,
       "mount_file_id": "1Nb6axbd2makj-lAkYy_81CqLwf8aKOQ9",
-      "authorship_tag": "ABX9TyPo0Teu0HymeVeKfZuIQdvS",
+      "authorship_tag": "ABX9TyNvcTCDTQugmNaFVU1qhOGE",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1175,7 +1175,7 @@
         "id": "zUeKZSuPHbBd"
       },
       "source": [
-        "##**4. Fitting (training) of the convolutional neural network**\n",
+        "#**4. Fitting (training) of the convolutional neural network**\n",
         "\n",
         "The next step in the training process is the actual training (fitting) of the model.\n",
         "\n",
@@ -1343,7 +1343,7 @@
         "id": "uhM2OOUZDoaN"
       },
       "source": [
-        "##**5. Evaluate the performance of the CNN model with a confusion matrix\n",
+        "#**5. Evaluate the performance of the CNN model with a confusion matrix**\n",
         "\n",
         "The final step is to evaluate the performance of our model and the model's ability to classify landcover / land use with the help of the test data. With the function `model.predict()`, we can classify the test input data `(X_test)`. The result `y_pred` is an array with the dimension `(1500, 10)`. For each input image of the test data, the prediction provides a vector which holds for each class the probability of the class."
       ]
